centjes-gen/test_resources/balance/error/BE_TOTAL.config
balance:
  # Keep only the two positive accounts, each within bounds individually, so
  # that hierarchical filling succeeds but summing the cross-account total
  # overflows: this is the only way to reach BalanceErrorCouldNotSumTotal.
  filter: keep
